Replace CDNs with npm packages
- Install jQuery, Bootstrap, Leaflet, Font Awesome, SweetAlert2 via npm
- Create main.js entry point to import all dependencies
- Remove all CDN links and fallback scripts from HTML
- Move static assets to public/ folder for Vite
- Update imports to use npm packages instead of CDNs

--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "devDependencies": {
     "@vitejs/plugin-legacy": "^7.1.0",
     "vite": "^7.0.6"
+  },
+  "dependencies": {
+    "bootstrap": "^3.4.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
+    "jquery-ui": "^1.12.1",
+    "leaflet": "^1.2.0",
+    "sweetalert2": "^7.33.1"
   }
 }
